--- a/app/src/main/res/layout/progress.xml
+++ b/app/src/main/res/layout/progress.xml
@@ -1,29 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_marginTop="?attr/actionBarSize"
     android:layout_height="match_parent">
     <com.rey.material.widget.ProgressView
         android:id="@+id/progressview"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_gravity="center_horizontal|center_vertical"
+        android:layout_marginTop="200dp"
         android:visibility="visible"
-        android:foregroundGravity="center"
         app:pv_autostart="true"
         app:pv_circular="true"
         app:pv_progressMode="indeterminate"
         app:pv_progressStyle="@style/Material.Drawable.CircularProgress.Normal" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/my_recycler_view"
-            android:layout_width="wrap_content"
-            android:background="@color/feed_bg"
-            android:layout_marginTop="5dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:layout_height="wrap_content"
-            android:scrollbars="vertical"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 </FrameLayout>
