--- a/app/src/main/res/layout/register_fragment.xml
+++ b/app/src/main/res/layout/register_fragment.xml
@@ -38,7 +38,7 @@
                     android:textAlignment="center"
                     android:textColor="@color/white1"
                     android:textSize="25dp"
-                    android:textStyle="bold" />-
+                    android:textStyle="bold" />
 
                 <ImageView
                     android:layout_width="100dp"
