--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,8 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/logout"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:icon="@drawable/logout"
+        android:iconTint="@color/primary_text"
+        android:title="@string/logout"
         app:showAsAction="never" />
 </menu>
