Added stari shaped imageview to profile pic. Added progress dialog while loading pages. Solved the issue regarding back button press in different fragments. Added uesr detail info page .

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,11 +21,8 @@
         <item name="cpd_strokeColor">?attr/colorPrimary</item>
     </style>
     <style name="Splash" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:background">@color/colorPrimary</item>
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:layout">@layout/splash_screen</item>
+
+        <item name="android:windowBackground">@color/colorPrimary</item>
     </style>
 
     <style name="custom_editText">
