--- a/app/src/main/res/layout/signin_layout.xml
+++ b/app/src/main/res/layout/signin_layout.xml
@@ -22,10 +22,11 @@
             android:paddingTop="120dp">
 
 
-            <android.support.v7.widget.AppCompatTextView
+            <TextView
                 android:id="@+id/sign"
                 style="@android:style/TextAppearance.Large"
                 android:layout_width="wrap_content"
+                android:background="@drawable/gradient"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
