--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/user_profile"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,15 +10,12 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.minu.demoapp.Activity.UserProfileActivity">
 
-    <ImageView
-        android:foregroundGravity="center_vertical"
+    <com.github.siyamed.shapeimageview.CircularImageView
         android:id="@+id/userImg"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-
-        android:scaleType="fitXY"
-        android:background="@color/cardview_shadow_end_color" />
-
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        app:siBorderWidth="6dp"
+        app:siBorderColor="@color/timestamp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
