--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,16 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single"
-        >
-        <item
-            android:id="@+id/logout"
-            android:icon="@drawable/logout"
-            android:iconTint="@color/primary_text"
-            android:title="Logout"
-            />
-    </group>
-
+    <group android:checkableBehavior="single"></group>
 
 
 </menu>
