--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -15,6 +15,7 @@
     <style name="custom_editText">
         <item name="android:layout_width">match_parent</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:layout_height">45dp</item>
         <item name="android:drawablePadding">5dp</item>
         <item name="android:padding">10dp</item>
