--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,6 +29,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:textSize">16sp</item>
         <item name="android:layout_height">45dp</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:drawablePadding">5dp</item>
         <item name="android:padding">10dp</item>
         <item name="android:gravity">center_vertical</item>
