--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:id="@+id/login_layout"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
@@ -38,7 +39,7 @@
                 android:textSize="25dp"
                 android:textStyle="bold" />
 
-            <android.support.v7.widget.AppCompatEditText
+            <EditText
                 android:id="@+id/userEmail"
                 style="@style/custom_editText"
                 android:layout_marginTop="30dp"
@@ -47,7 +48,7 @@
                 android:hint="Email"
                 android:singleLine="true" />
 
-            <android.support.v7.widget.AppCompatEditText
+            <EditText
                 android:id="@+id/userPassword"
                 style="@style/custom_editText"
                 android:layout_marginTop="10dp"
