--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -9,12 +9,10 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.minu.demoapp.Activity.UserProfileActivity">
 
-    <com.github.siyamed.shapeimageview.CircularImageView
+    <ImageView
         android:id="@+id/userImg"
         android:layout_width="200dp"
-        android:layout_height="200dp"
-        app:siBorderWidth="6dp"
-        app:siBorderColor="@color/timestamp"/>
+        android:layout_height="200dp" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
